# web3-valet

./: .gitignore  README.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/Chat/: AgentAudioPlayer.tsx  AgentSelector.tsx  ChatView.tsx  MintModal.tsx
frontend/src/components/InputArea/: InputArea.tsx  RecordingUI.tsx
frontend/src/services/: api.ts
mcp-api/: .env.example  .gitignore  Cargo.toml  README.md
mcp-api/src/: handlers.rs  main.rs  models.rs
mcp-server/: .env.example  .gitignore  Cargo.toml  README.md
mcp-server/src/: main.rs
web3-minting/: README.md
