[package]
name = "mcp-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# The web framework itself
axum = { version = "0.8", features = ["multipart"] }

# The async "engine" that runs our server
tokio = { version = "1", features = ["full"] }

# For handling JSON (we'll need this in Phase 2)
serde = { version = "1.0", features = ["derive"] }

# For handling CORS (Cross-Origin Resource Sharing)
tower-http = { version = "0.6", features = ["cors", "fs"] }

# For logging information to our terminal
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }

# For loading secrets from a .env file
dotenv = "0.15"
serde_json = "1.0.145"

# For generating unique filenames
uuid = { version = "1.0", features = ["v4"] }

# For streaming utilities
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
